--- a/sionna_server/requirements_gpu.txt
+++ b/sionna_server/requirements_gpu.txt
@@ -1,9 +1,7 @@
-numpy==1.24.3
-matplotlib==3.7.1
-protobuf==3.19.6
-tensorflow[and-cuda]==2.10.1
-mitsuba==3.3.0
-sionna==0.17.0
+numpy==1.26
+matplotlib==3.10
+protobuf==3.20.3
+tensorflow==2.16.1
+sionna==1.1.0
 pyzmq==25.0.2
-nvidia-tensorrt
-nvidia-pyindex 
+tensorrt
