--- a/sionna_server/requirements_gpu.txt
+++ b/sionna_server/requirements_gpu.txt
@@ -1,7 +1,7 @@
 numpy==1.26
 matplotlib==3.10
 protobuf==3.20.3
-tensorflow==2.16.1
+tensorflow[and-cuda]==2.16.1
 sionna==1.1.0
 pyzmq==25.0.2
 tensorrt
